# Seop_particle_sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  tash show -p  vcpkg.json
src/: CMakeLists.txt
src/imgui/: CMakeLists.txt
src/imgui/imgui/: imgui.cpp
src/seop/: CMakeLists.txt  main.cpp
src/seop/Input/: CMakeLists.txt
src/seop/Input/seop_input/: input.cpp  input.hpp
src/seop/command/: CMakeLists.txt
src/seop/command/seop_command/: command.cpp  command.hpp
src/seop/context/: CMakeLists.txt
src/seop/context/seop_context/: context.hpp
src/seop/editor/: CMakeLists.txt
src/seop/editor/seop_editor/: editor.cpp  editor.hpp
src/seop/entity/: CMakeLists.txt
src/seop/entity/seop_entity/: attractor.hpp  particle.cpp  particle.hpp
src/seop/example/: CMakeLists.txt
src/seop/example/seop_example/: example.cpp  example.hpp
src/seop/graphic/: CMakeLists.txt
src/seop/graphic/seop_graphic/: device.cpp  device.hpp  quad_shader.hpp  shader.hpp  shader_program.cpp  shader_program.hpp  vertex.hpp
src/seop/graphic/seop_graphic/compute_shaders/: electro_cs_shader.hpp  gravity_cs_source.hpp  magnetic_field_cs_shader.hpp  static_magnetic_field_cs_shader.hpp
src/seop/graphic/seop_graphic/shader/comp/: arrow_field.comp  lolernz_equation.comp  static_magnetic_field.comp
src/seop/graphic/seop_graphic/shader/frag/: arrow.frag  grid.frag  particle.frag  screen_quad.frag  wire.frag
src/seop/graphic/seop_graphic/shader/vert/: arrow.vert  grid.vert  particle.vert  screen_quad.vert  wire.vert
src/seop/graphic/seop_graphic/shaders/: grid_shader.hpp  particle_shader.hpp  wire_shader.hpp
src/seop/imgui/: CMakeLists.txt
src/seop/imgui/seop_imgui/: imgui_core.cpp  imgui_core.hpp  imgui_dockspace.cpp  imgui_dockspace.hpp  imgui_renderer.cpp  imgui_renderer.hpp
src/seop/input/seop_input/: input.cpp  input.hpp  keys.hpp
src/seop/item/: CMakeLists.txt
src/seop/item/seop_item/: item.cpp  item.hpp  wire.cpp  wire.hpp
src/seop/math/: .vec3.hpp.swp  CMakeLists.txt
src/seop/math/seop_math/: math.cpp  math.hpp
src/seop/message/: CMakeLists.txt
src/seop/message/seop_message/: message.cpp  message.hpp
src/seop/opengl/: CMakeLists.txt
src/seop/opengl/seop_opengl/: buffer.cpp  buffer.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/seop/primitive/: CMakeLists.txt
src/seop/primitive/seop_primitive/: vertex.cpp  vertex.hpp
src/seop/raytrace/: CMakeLists.txt
src/seop/raytrace/seop_raytrace/: ray.cpp  ray.hpp
src/seop/scene/: CMakeLists.txt
src/seop/scene/seop_scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp  scene_command.hpp  scene_message.cpp  scene_message.hpp
src/seop/util/: CMakeLists.txt
src/seop/util/seop_util/: util.hpp
src/seop/window/: CMakeLists.txt
src/seop/window/seop_window/: glf_window.cpp  glf_window.hpp  window_message.cpp  window_message.hpp
